Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118668

QTextToSpeech::synthesize under window does not get data

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.6.1, 6.7.0 FF
    • 6.6.0
    • Speech
    • None
    • Windows
    • 27e722966 (dev), a7f8b8cf2 (6.6), f364fd4c2 (dev), dd5f53b98 (6.6), b2be51f98 (tqtc/lts-6.5)

      When I do call under Windows the function QTextToSpeech::synthesize thene

      • The stateChanged(QTextToSpeech::State state) is called correctly with QTextToSpeech::Synthesizing)
      • The functor is called just once with the bytes empty.
      • The  stateChanged(QTextToSpeech::State state)  is never called with ready.

      I have used the functionality with a dev version when you still had the "synthesized event" and the synthesized event was called many times and then the stateChanged with ready.

      Now I'm trying to use the release version 6.6.0 with the new version of the API (compliment more clean solution!) but I cannot get any synthesized speech. 
      I have tried both version of the synthetize (with a lambda and with a call to a a function) but there are no differences.

      I do attach a printscreen with a stop and debug data just after the first call to the functor.

      Currently I have no idea how I can help further.

       

        1. hello_speak.zip
          4 kB
        2. image-2023-11-01-12-04-26-737.png
          image-2023-11-01-12-04-26-737.png
          725 kB
        3. image-2023-11-02-16-06-57-550.png
          image-2023-11-02-16-06-57-550.png
          329 kB
        4. image-2023-11-04-06-56-45-505.png
          image-2023-11-04-06-56-45-505.png
          110 kB
        5. image-2023-11-04-06-56-55-912.png
          image-2023-11-04-06-56-55-912.png
          110 kB
        6. image-2023-11-07-19-20-11-726.png
          image-2023-11-07-19-20-11-726.png
          334 kB
        7. LastTest.log
          20 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            domezuk Domenico Zucchetti
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes